[default-layoyt] Making tool container block and overflow auto. Also fix background color on mobile

--- a/packages/@sanity/components/src/panes/styles/DefaultPane.css
+++ b/packages/@sanity/components/src/panes/styles/DefaultPane.css
@@ -10,7 +10,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #fff;
+  background-color: var(--body-bg);
 
   @media (--screen-medium) {
     /* Reset mobile first */
